--- a/src/components/StorePageComponents/ProductGrid/ProductGrid.module.css
+++ b/src/components/StorePageComponents/ProductGrid/ProductGrid.module.css
@@ -6,4 +6,12 @@
   margin: 2rem auto;
   padding: 0 var(--padding-container);
   background-color: var(--color-bg);
+
+  grid-auto-rows: auto;
+}
+
+.cardWrapper {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
